Fix Twitter button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: '明治大学 宮下研究室 最新情報'
         <date class="pr2 h4">{{ post.date | date: '%Y.%m.%d' }}</date>
         <a href="{{site.baseurl}}{{post.url}}">{{ post.title }}</a>
       </h2>
-      <div class="p0">
+      <div class="p0 right-align">
         {% assign custom_url = site.url | append: site.baseurl %}
         {% assign full_base_url = site.github.url | default: custom_url %}
         <a href="https://twitter.com/share" class="twitter-share-button" data-url="{{full_base_url}}{{post.url}}" data-text="{{post.title}} | 宮下研究室">Tweet</a>
